--- a/block-BHaabu/style.css
+++ b/block-BHaabu/style.css
@@ -49,6 +49,7 @@ table {
 body{
     background:url(https://images.pexels.com/photos/1563356/pexels-photo-1563356.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500),no-repeat, linear-gradient(rgba(0,0,0,0.2),rgba(136, 15, 15, 0.2));
     background-size: cover;
+    padding-bottom: 120px;
 }
 .header{
     font-size:40px;
@@ -65,7 +66,7 @@ body{
 .boxs{
     width: 400px;
     height:300px;
-    background-color:red;
+    color: white;
     border-radius: 20px;
     display: flex;
     align-items: center;
@@ -73,7 +74,7 @@ body{
     font-size:25px;
 }
 .box1{
-
+background-color: red;
 }
 .box2{
 background:linear-gradient(to right, rgb(51, 14, 14) ,rgb(200, 39, 39));
@@ -81,13 +82,12 @@ background:linear-gradient(to right, rgb(51, 14, 14) ,rgb(200, 39, 39));
 .box3{
     background:radial-gradient(rgb(214, 24, 24) ,rgb(68, 37, 37))
 }
-.img{
-    width:55%;
+.big-box{
+    width:85%;
+    height:350px;
     margin: 0 auto;
     padding: 40px;
-}
-.img img{
-    width:100%;
-    border-radius:20px;
-    background:url() linear-gradient(rgb(51, 14, 14) ,rgb(200, 39, 39));
+    margin-top: 40px;
+    background:linear-gradient( to right bottom ,transparent,rgb(77, 14, 14)),url(https://static.theprint.in/wp-content/uploads/2018/02/NH-212_through_Bandhipur_forest_roads_in_Kerala_India.jpg) 50% 50% ,no-repeat;
+    background-size: cover;
 }
